added lectureblock, added gallery block, added subscription block

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
+
     <div class="grid grid--tablet">
       <div
         class="
@@ -202,9 +203,146 @@
         </div>
       </section>
 
-      <section class="page__section"></section>
+      <section class="page__gallery gallery">
+        <div class="section">
+          <div class="container">
+            <h2 class="gallery__title">Галерея</h2>
+          </div>
 
-      <section class="page__section"></section>
+          <div class="gallery__slider">
+            <div class="gallery__slide" id="slide-1">
+              <img
+                src="./images/photos/gallery-1.jpg"
+                alt="gallery-1"
+                class="gallery__photo"
+              >
+            </div>
+
+            <div class="gallery__slide" id="slide-2">
+              <img
+                src="./images/photos/gallery-2.jpg"
+                alt="gallery-2"
+                class="gallery__photo"
+              >
+            </div>
+
+            <div class="gallery__slide" id="slide-3">
+              <img
+                src="./images/photos/gallery-3.jpg"
+                alt="gallery-3"
+                class="gallery__photo"
+              >
+            </div>
+
+            <div class="gallery__slide" id="slide-4">
+              <img
+                src="./images/photos/gallery-4.jpg"
+                alt="gallery-4"
+                class="gallery__photo"
+              >
+            </div>
+          </div>
+
+          <div class="gallery__nav">
+            <a href="#slide-1" class="gallery__dot"></a>
+            <a href="#slide-2" class="gallery__dot"></a>
+            <a href="#slide-3" class="gallery__dot"></a>
+            <a href="#slide-4" class="gallery__dot"></a>
+          </div>
+
+          <div class="gallery__desktop">
+            <div class="container">
+              <div class="grid grid--desktop grid--gallery">
+                <div
+                  class="
+                    grid__item
+                    grid__item--desktop-1-4
+                    grid__item--desktop-r-1
+                  ">
+                  <div class="gallery__photo-container">
+                    <img
+                      src="./images/photos/gallery-1.jpg"
+                      alt="gallery-1"
+                      class="gallery__photo"
+                    >
+                  </div>
+                </div>
+
+                <div
+                  class="
+                    grid__item
+                    grid__item--desktop-5-12
+                    grid__item--desktop-r-1
+                  ">
+                  <div class="gallery__photo-container">
+                    <img
+                      src="./images/photos/gallery-2.jpg"
+                      alt="gallery-2"
+                      class="gallery__photo"
+                    >
+                  </div>
+                </div>
+
+                <div
+                  class="
+                    grid__item
+                    grid__item--desktop-1-8
+                    grid__item--desktop-r-2
+                  ">
+                  <div class="gallery__photo-container">
+                    <img
+                      src="./images/photos/gallery-3.jpg"
+                      alt="gallery-3"
+                      class="gallery__photo"
+                    >
+                  </div>
+                </div>
+
+                <div
+                  class="
+                    grid__item
+                    grid__item--desktop-9-12
+                    grid__item--desktop-r-2
+                  ">
+                  <div class="gallery__photo-container">
+                    <img
+                      src="./images/photos/gallery-4.jpg"
+                      alt="gallery-4"
+                      class="gallery__photo"
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__subscription subscription">
+        <div class="container">
+          <h2 class="subscription__title">Підписка</h2>
+
+          <h3 class="subscription__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</h3>
+
+          <form
+            action="#"
+            class="subscription__form"
+            id="subscription-form"
+          >
+            <input
+              required
+              name="email"
+              type="email"
+              placeholder="E-mail"
+              class="subscription__field"
+            >
+
+            <button class="subscription__arrow"></button>
+          </form>
+
+          <div class="subscription__form-message" id="output-box"></div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
