--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
           <div class="art-museum__tickets">
             <a href="#current-events" class="art-museum__tickets-link">КВИТКИ</a>
 
-            <div class="art-museum__arrow"></div>
+            <a href="#current-events" class="art-museum__arrow"></a>
           </div>
 
           <div class="art-museum__events">
@@ -58,7 +58,12 @@
           <div class="menu__top">
             <a href="#" class="menu__cross icon icon--cross"></a>
 
-            <ul class="menu__list list">
+            <ul
+              class="
+                menu__list
+                list
+                list--menu
+              ">
               <li class="list__item">
                 <a href="#gallery" class="list__link">Галерея</a>
               </li>
@@ -72,7 +77,7 @@
               </li>
 
               <li class="list__item">
-                <a href="#contacts" class="list__link">Контакти</a>
+                <a href="#footer" class="list__link">Контакти</a>
               </li>
             </ul>
           </div>
@@ -101,22 +106,22 @@
     </nav>
 
     <main>
-      <section class="page__current-events current-events">
+      <section class="page__current-events current-events" id="current-events">
         <div class="container">
           <h2 class="current-events__title">Актуальні події</h2>
 
-          <div class="current-events__card card">
+          <div class="current-events__event event">
             <div class="grid grid--desktop">
               <div
                 class="
                   grid__item
                   grid__item--desktop-1-7
                 ">
-                <div class="card__photo-container">
+                <div class="event__photo-container">
                   <img
                     src="./images/photos/current-event-1.jpg"
                     alt="current-event-1"
-                    class="card__photo"
+                    class="event__photo"
                   >
                 </div>
               </div>
@@ -126,16 +131,16 @@
                   grid__item
                   grid__item--desktop-9-12
                 ">
-                <div class="card__info">
-                  <div class="card__top-info">
-                    <div class="card__event-type">ВИСТАВКА</div>
+                <div class="event__info">
+                  <div class="event__top-info">
+                    <div class="event__type">ВИСТАВКА</div>
 
-                    <div class="card__event-date">26.08-29.11.2019</div>
+                    <div class="event__date">26.08-29.11.2019</div>
                   </div>
 
-                  <h3 class="card__title">Йду і повертаюсь</h3>
+                  <h3 class="event__title">Йду і повертаюсь</h3>
 
-                  <p class="card__description">
+                  <p class="event__description">
                     Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
                   </p>
                 </div>
@@ -143,18 +148,18 @@
             </div>
           </div>
 
-          <div class="current-events__card card">
+          <div class="current-events__event event">
             <div class="grid grid--desktop">
               <div
                 class="
                   grid__item
                   grid__item--desktop-1-7
                 ">
-                <div class="card__photo-container">
+                <div class="event__photo-container">
                   <img
                     src="./images/photos/current-event-2.jpg"
                     alt="current-event-2"
-                    class="card__photo"
+                    class="event__photo"
                   >
                 </div>
               </div>
@@ -164,16 +169,16 @@
                   grid__item
                   grid__item--desktop-9-12
                 ">
-                <div class="card__info">
-                  <div class="card__top-info">
-                    <div class="card__event-type">ВИСТАВКА</div>
+                <div class="event__info">
+                  <div class="event__top-info">
+                    <div class="event__type">ВИСТАВКА</div>
 
-                    <div class="card__event-date">26.08-29.11.2019</div>
+                    <div class="event__date">26.08-29.11.2019</div>
                   </div>
 
-                  <h3 class="card__title">І спогади і мрії</h3>
+                  <h3 class="event__title">І спогади і мрії</h3>
 
-                  <p class="card__description">
+                  <p class="event__description">
                     Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
                   </p>
                 </div>
@@ -203,114 +208,112 @@
         </div>
       </section>
 
-      <section class="page__gallery gallery">
-        <div class="section">
+      <section class="page__gallery gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+        </div>
+
+        <div class="gallery__slider">
+          <div class="gallery__slide" id="slide-1">
+            <img
+              src="./images/photos/gallery-1.jpg"
+              alt="gallery-1"
+              class="gallery__photo"
+            >
+          </div>
+
+          <div class="gallery__slide" id="slide-2">
+            <img
+              src="./images/photos/gallery-2.jpg"
+              alt="gallery-2"
+              class="gallery__photo"
+            >
+          </div>
+
+          <div class="gallery__slide" id="slide-3">
+            <img
+              src="./images/photos/gallery-3.jpg"
+              alt="gallery-3"
+              class="gallery__photo"
+            >
+          </div>
+
+          <div class="gallery__slide" id="slide-4">
+            <img
+              src="./images/photos/gallery-4.jpg"
+              alt="gallery-4"
+              class="gallery__photo"
+            >
+          </div>
+        </div>
+
+        <div class="gallery__nav">
+          <a href="#slide-1" class="gallery__dot"></a>
+          <a href="#slide-2" class="gallery__dot"></a>
+          <a href="#slide-3" class="gallery__dot"></a>
+          <a href="#slide-4" class="gallery__dot"></a>
+        </div>
+
+        <div class="gallery__desktop">
           <div class="container">
-            <h2 class="gallery__title">Галерея</h2>
-          </div>
-
-          <div class="gallery__slider">
-            <div class="gallery__slide" id="slide-1">
-              <img
-                src="./images/photos/gallery-1.jpg"
-                alt="gallery-1"
-                class="gallery__photo"
-              >
-            </div>
-
-            <div class="gallery__slide" id="slide-2">
-              <img
-                src="./images/photos/gallery-2.jpg"
-                alt="gallery-2"
-                class="gallery__photo"
-              >
-            </div>
-
-            <div class="gallery__slide" id="slide-3">
-              <img
-                src="./images/photos/gallery-3.jpg"
-                alt="gallery-3"
-                class="gallery__photo"
-              >
-            </div>
-
-            <div class="gallery__slide" id="slide-4">
-              <img
-                src="./images/photos/gallery-4.jpg"
-                alt="gallery-4"
-                class="gallery__photo"
-              >
-            </div>
-          </div>
-
-          <div class="gallery__nav">
-            <a href="#slide-1" class="gallery__dot"></a>
-            <a href="#slide-2" class="gallery__dot"></a>
-            <a href="#slide-3" class="gallery__dot"></a>
-            <a href="#slide-4" class="gallery__dot"></a>
-          </div>
-
-          <div class="gallery__desktop">
-            <div class="container">
-              <div class="grid grid--desktop grid--gallery">
-                <div
-                  class="
-                    grid__item
-                    grid__item--desktop-1-4
-                    grid__item--desktop-r-1
-                  ">
-                  <div class="gallery__photo-container">
-                    <img
-                      src="./images/photos/gallery-1.jpg"
-                      alt="gallery-1"
-                      class="gallery__photo"
-                    >
-                  </div>
+            <div class="grid grid--desktop grid--gallery">
+              <div
+                class="
+                  grid__item
+                  grid__item--desktop-1-4
+                  grid__item--desktop-r-1
+                ">
+                <div class="gallery__photo-container">
+                  <img
+                    src="./images/photos/gallery-1.jpg"
+                    alt="gallery-1"
+                    class="gallery__photo"
+                  >
                 </div>
+              </div>
 
-                <div
-                  class="
-                    grid__item
-                    grid__item--desktop-5-12
-                    grid__item--desktop-r-1
-                  ">
-                  <div class="gallery__photo-container">
-                    <img
-                      src="./images/photos/gallery-2.jpg"
-                      alt="gallery-2"
-                      class="gallery__photo"
-                    >
-                  </div>
+              <div
+                class="
+                  grid__item
+                  grid__item--desktop-5-12
+                  grid__item--desktop-r-1
+                ">
+                <div class="gallery__photo-container">
+                  <img
+                    src="./images/photos/gallery-2.jpg"
+                    alt="gallery-2"
+                    class="gallery__photo"
+                  >
                 </div>
+              </div>
 
-                <div
-                  class="
-                    grid__item
-                    grid__item--desktop-1-8
-                    grid__item--desktop-r-2
-                  ">
-                  <div class="gallery__photo-container">
-                    <img
-                      src="./images/photos/gallery-3.jpg"
-                      alt="gallery-3"
-                      class="gallery__photo"
-                    >
-                  </div>
+              <div
+                class="
+                  grid__item
+                  grid__item--desktop-1-8
+                  grid__item--desktop-r-2
+                ">
+                <div class="gallery__photo-container">
+                  <img
+                    src="./images/photos/gallery-3.jpg"
+                    alt="gallery-3"
+                    class="gallery__photo"
+                  >
                 </div>
+              </div>
 
-                <div
-                  class="
-                    grid__item
-                    grid__item--desktop-9-12
-                    grid__item--desktop-r-2
-                  ">
-                  <div class="gallery__photo-container">
-                    <img
-                      src="./images/photos/gallery-4.jpg"
-                      alt="gallery-4"
-                      class="gallery__photo"
-                    >
-                  </div>
+              <div
+                class="
+                  grid__item
+                  grid__item--desktop-9-12
+                  grid__item--desktop-r-2
+                ">
+                <div class="gallery__photo-container">
+                  <img
+                    src="./images/photos/gallery-4.jpg"
+                    alt="gallery-4"
+                    class="gallery__photo"
+                  >
                 </div>
               </div>
             </div>
@@ -318,7 +321,7 @@
         </div>
       </section>
 
-      <section class="page__subscription subscription">
+      <section class="page__subscription subscription" id="about-us">
         <div class="container">
           <h2 class="subscription__title">Підписка</h2>
 
@@ -346,7 +349,139 @@
     </main>
 
     <footer class="footer">
+      <div class="container">
+        <div class="grid">
+          <div
+            class="
+              grid__item
+              grid__item--mobile-1-2
+              grid__item--tablet-1-1
+              grid__item--desktop-1-1
+            ">
+            <div class="footer__top">
+              <a href="#" class="logo footer__logo">NA<br>MU</a>
 
+              <div class="footer__social-media">
+                <a
+                  href="https://www.facebook.com/namu.museum/"
+                  class="icon icon--facebook"
+                ></a>
+
+                <a
+                  href="https://www.instagram.com/namu.museum/?hl=en"
+                  class="icon icon--instagram"
+                ></a>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="
+              grid__item
+              grid__item--mobile-1-1
+              grid__item--tablet-2-3
+              grid__item--desktop-3-4
+            ">
+            <div class="footer__schedule schedule">
+              <h4 class="footer__schedule-item schedule__title">Графік роботи</h4>
+
+              <p class="footer__schedule-item schedule__working">
+                <span class="schedule__bold">12:00 — 20:00</span> середа<br>
+                <span class="schedule__bold">12:00 — 20:00</span> четвер<br>
+                <span class="schedule__bold">12:00 — 20:00</span> п’ятниця<br>
+                <span class="schedule__bold">11:00 — 19:00</span> субота<br>
+                <span class="schedule__bold">11:00 — 19:00</span> неділя
+              </p>
+
+              <p class="footer__schedule-item schedule__weekend">
+                <span class="schedule__bold">Вихідні:</span> понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину до<br>
+                закриття музею
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="
+              grid__item
+              grid__item--mobile-2-2
+              grid__item--tablet-4-5
+              grid__item--desktop-5-6
+            ">
+            <div class="footer__contacts contacts">
+              <h4 class="contacts__title">Контакти:</h4>
+
+              <div class="contacts__info">
+                <a
+                  href="https://goo.gl/maps/Nm2Bc6ReNub13YZQ9"
+                  class="contacts__link"
+                  target="_blank">
+                  вул. М.Грушевського, 6; Київ, 01001
+                </a>
+
+                <a href="tel:+38 (044) 278-13-57" class="contacts__link">
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a href="fax:+38 (044) 278-74-54" class="contacts__link">
+                  факс +38 (044) 278-74-54
+                </a>
+                <a href="mailto:info@namu.kiev.ua" class="contacts__link">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="
+              grid__item
+              grid__item--mobile-2-2
+            ">
+            <a href="#" class="footer__return"></a>
+          </div>
+
+          <div
+            class="
+              grid__item
+              grid__item--mobile-1-2
+              grid__item--tablet-2-5
+              grid__item--desktop-7-7
+            ">
+            <div class="footer__line"></div>
+          </div>
+
+          <div
+            class="
+              grid__item
+              grid__item--mobile-1-2
+              grid__item--tablet-2-5
+              grid__item--desktop-8-11
+            ">
+            <ul class="footer__list list">
+              <li class="list__item">
+                <a href="#gallery" class="list__link">Галерея</a>
+              </li>
+
+              <li class="list__item">
+                <a href="#about-us" class="list__link">Про Нас</a>
+              </li>
+
+              <li class="list__item">
+                <a href="#current-events" class="list__link">Виставки та події</a>
+              </li>
+
+              <li class="list__item">
+                <a href="#footer" class="list__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__bottom">
+          <div class="footer__author">Designed by Zhyriada Marina</div>
+          <div class="footer__copyright">Copyright © 2019. All Rights Reserved.</div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
