--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
+    <link rel="icon" href="./images/NAMU-logo.svg">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -51,12 +52,17 @@
       </div>
     </div>
 
-
     <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
           <div class="menu__top">
-            <a href="#" class="menu__cross icon icon--cross"></a>
+            <a
+              href="#"
+              class="
+                menu__cross
+                icon
+                icon--cross
+              "></a>
 
             <ul
               class="
@@ -69,7 +75,7 @@
               </li>
 
               <li class="list__item">
-                <a href="#about-us" class="list__link">Про Нас</a>
+                <a href="#subscription" class="list__link">Про Нас</a>
               </li>
 
               <li class="list__item">
@@ -256,7 +262,12 @@
 
         <div class="gallery__desktop">
           <div class="container">
-            <div class="grid grid--desktop grid--gallery">
+            <div
+              class="
+                grid
+                grid--desktop
+                grid--gallery
+              ">
               <div
                 class="
                   grid__item
@@ -321,7 +332,7 @@
         </div>
       </section>
 
-      <section class="page__subscription subscription" id="about-us">
+      <section class="page__subscription subscription" id="subscription">
         <div class="container">
           <h2 class="subscription__title">Підписка</h2>
 
@@ -463,7 +474,7 @@
               </li>
 
               <li class="list__item">
-                <a href="#about-us" class="list__link">Про Нас</a>
+                <a href="#subscription" class="list__link">Про Нас</a>
               </li>
 
               <li class="list__item">
