--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,389 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
+    <link rel="icon" href="./images/NAMU.png">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="page__header header" id="home">
+      <div class="container">
+        <div class="header__content">
+          <nav class="header-top grid grid--flex">
+            <div class="header-top__icon">
+              <a href="#menu" class="header-top__icon-menu"></a>
+            </div>
+            <h2 class="
+              header-top__logo
+              grid__item--tablet-4-5
+              grid__item--desktop-7-8
+            ">
+              <a href="#" class="header-top__logo-title">
+                Na
+                <br>
+                Mu
+              </a>
+              <br>
+            </h2>
+            <div class="header-top__empt"></div>
+          </nav>
+
+          <div class="header__info grid">
+            <h1 class="header__title grid__item--1-2 grid__item--tablet-1-5">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="header__form grid__item--1-2 grid__item--tablet-1-3 grid__item--desktop-3-5">
+              <div class="header__item">КВИТКИ</div>
+              <a href="#events" class="header__button">
+                <img
+                  class="header__image"
+                  src="./images/Vector.svg"
+                  alt="Vector"
+                >
+              </a>
+            </div>
+          </div>
+
+          <a href="#events" class="header__event">
+            Події
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__nav nav">
+            <div class="menu__cross">
+              <a href="#" class="menu__cross-icon"></a>
+            </div>
+            <ul class="nav__item">
+              <li class="nav__list">
+                <a href="#gallery" class="nav__link">Галерея</a>
+              </li>
+              <li class="nav__list">
+                <a href="#events" class="nav__link">Виставки та події</a>
+              </li>
+            </ul>
+            <ul class="nav__item">
+              <li class="nav__list">
+                <a href="#subscription" class="nav__link">Про Нас</a>
+              </li>
+              <li class="nav__list">
+                <a href="#contacts" class="nav__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="menu__line"></div>
+
+          <div class="menu__timetable timetable">
+            <div class="timetable__week">
+              <div class="timetable__title">Графік роботи</div>
+              <div class="timetable__day">
+                <strong>12:00 — 20:00</strong> середа
+              </div>
+              <div class="timetable__day">
+                <strong>12:00 — 20:00</strong> четвер
+              </div>
+              <div class="timetable__day">
+                <strong>12:00 — 20:00</strong> п'ятниця
+              </div>
+              <div class="timetable__day">
+                <strong>11:00 — 19:00</strong> субота
+              </div>
+              <div class="timetable__day">
+                <strong>11:00 — 19:00</strong> неділя
+              </div>
+            </div>
+            <div class="timetable__remark">
+              <strong>Вихідні:</strong> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <section class="page__events events" id="events">
+        <div class="container">
+          <div class="event__content">
+            <h2 class="events__title">Актуальні події</h2>
+            <div class="events__block events__block--bottom">
+              <img
+                  src="./images/events/Rectangle 2.3.jpg"
+                  alt="image-1"
+                  class="events__photo"
+                >
+              <div class="events__info">
+                <div class="events__timetable">
+                  <p class="events__timetable-exibition">ВИСТАВКА</p>
+                  <span class="events__timetable-data">26.08-29.11.2019</span>
+                </div>
+                <div class="events__sibtitle">
+                  <h3 class="events__sibtitle-name">Йду і повертаюсь</h3>
+                  <div class="events__sibtitle-point"></div>
+                </div>
+                <p class="events__paragraph">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+
+            <div class="events__block events__block--bottom">
+              <img
+                  src="./images/events/Rectangle 4.3.jpg"
+                  alt="image-1"
+                  class="events__photo"
+                >
+              <div class="events__info">
+                <div class="events__timetable">
+                  <p class="events__timetable-exibition">ВИСТАВКА</p>
+                  <span class="events__timetable-data">26.08-29.11.2019</span>
+                </div>
+                <div class="events__sibtitle">
+                  <h3 class="events__sibtitle-name">І спогади і мрії</h3>
+                  <div class="events__sibtitle-point"></div>
+                </div>
+                <p class="events__paragraph">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__lecture lecture">
+        <img
+              src="./images/events/Rectangle 20.jpg"
+              alt="classicism"
+              class="lecture__photo"
+            >
+        <div class="lecture__block">
+          <div class="lecture__timetable">
+            <p class="lecture__timetable-name">ЛЕКЦІЯ</p>
+            <span class="lecture__timetable-data">26/08/2019 - 11:00</span>
+          </div>
+          <h3 class="lecture__title">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+
+      <section class="page__gallery gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__desktop grid">
+            <div class="gallery--1 grid__item--desktop-1-4">
+              <img src=".//images/gallery/Rectangle 13.5.jpg" alt="paint-1">
+            </div>
+            <div class="gallery--2 grid__item--desktop-5-12">
+              <img src=".//images/gallery/Rectangle 3.1.jpg" alt="paint-2">
+            </div>
+            <div class="galery--3 grid__item--desktop-1-8">
+              <img src=".//images/gallery/Rectangle 13.3.jpg" alt="paint-3">
+            </div>
+            <div class="galery--4 grid__item--desktop-9-12">
+              <img src=".//images/gallery/Rectangle 13.4.jpg" alt="paint-4">
+            </div>
+          </div>
+        </div>
+        <div class="gallery__swiper swiper">
+          <div class="swiper__block">
+            <div class="swiper__photo">
+              <img
+               src="./images/gallery/Rectangle 13.5.jpg"
+               alt="paint-1"
+               class="swiper__photo-img"
+              >
+            </div>
+            <div class="swiper__photo">
+              <img
+               src="./images/gallery/Rectangle 24.1.jpg"
+               alt="paint-1"
+               class="swiper__photo-img"
+              >
+            </div>
+            <div class="swiper__photo">
+              <img
+               src="./images/gallery/Rectangle 3.1.jpg"
+               alt="paint-1"
+               class="swiper__photo-img"
+              >
+            </div>
+            <div class="swiper__photo">
+              <img
+               src="./images/gallery/Rectangle 13.3.jpg"
+               alt="paint-1"
+               class="swiper__photo-img"
+              >
+            </div>
+          </div>
+          <div class="swiper__bullet">
+            <span class="swiper__item swiper__item--active"></span>
+            <span class="swiper__item"></span>
+            <span class="swiper__item"></span>
+            <span class="swiper__item"></span>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="container">
+          <h2 class="subscription__title">Підписка</h2>
+          <p class="subscription__sibtitle">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form
+            action="index.html"
+            method="get"
+            class="subscription__form"
+            autocomplete="off"
+          >
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="subscription__form-input"
+              required
+            >
+            <button type="submit" class="subscription__form-button">
+              <img src="./images/Vector-form.svg" alt="Vector">
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__content">
+          <div class="grid">
+            <div class="footer__social grid__item--1-2 grid__item--tablet-1-1">
+              <h2 class="header-top__logo header-top__logo--footer">
+                <a href="#" class="header-top__logo-title">
+                  Na
+                  <br>
+                  Mu
+                </a>
+                <br>
+              </h2>
+              <div class="footer__icon">
+                <a href="https://www.facebook.com" class="footer__icon-facebook">
+                  <img
+                    src=".//images/fotter/Facebook.svg"
+                    alt="Facebook"
+                    class="footer__icon-img"
+                  >
+                </a>
+                <a href="https://www.instagram.com" class="footer__icon-instagram">
+                  <img
+                    src=".//images/fotter/instagram.svg"
+                    alt="Instagram"
+                    class="footer__icon-img"
+                  >
+                </a>
+              </div>
+            </div>
+
+            <div class="grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+              <div class="menu__timetable timetable timetable--footer">
+                <div class="timetable__week">
+                  <div class="timetable__title">Графік роботи</div>
+                  <div class="timetable__day">
+                    <strong>12:00 — 20:00</strong> середа
+                  </div>
+                  <div class="timetable__day">
+                    <strong>12:00 — 20:00</strong> четвер
+                  </div>
+                  <div class="timetable__day">
+                    <strong>12:00 — 20:00</strong> п'ятниця
+                  </div>
+                  <div class="timetable__day">
+                    <strong>11:00 — 19:00</strong> субота
+                  </div>
+                  <div class="timetable__day">
+                    <strong>11:00 — 19:00</strong> неділя
+                  </div>
+                </div>
+                <div class="timetable__remark timetable__remark--footer">
+                  <strong>Вихідні:</strong> понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </div>
+              </div>
+            </div>
+
+            <div class="grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
+              <div class="footer__contacts">
+                <span class="footer__contacts-title">
+                  Контакти:
+                </span>
+                <div class="footer__info">
+                  <a
+                    href="https://goo.gl/maps/REwzLr8W8dXUeakH6"
+                    target="_blank"
+                    class="footer__info-link"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                  <a href="tel:+38(044)278-13-57" class="footer__info-link">
+                    тел. +38 (044) 278-13-57
+                  </a>
+                  <a href="tel:+38(044)278-74-54" class="footer__info-link">
+                    факс +38 (044) 278-74-54
+                  </a>
+                  <a href="mailto:info@namu.kiev.ua" class="footer__info-link">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="footer__go-up grid__item--2-2">
+              <a href="#home" class="footer__go-up--icon"></a>
+            </div>
+
+            <div class="grid__item--1-2 grid__item--tablet-2-5 grid__item--desktop-7-7">
+              <div class="footer__line"></div>
+            </div>
+
+            <div class="grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-8-9">
+              <ul class="nav__item">
+                <li class="nav__list">
+                  <a href="#gallery" class="nav__link nav__link--footer">Галерея</a>
+                </li>
+                <li class="nav__list">
+                  <a href="#events" class="nav__link nav__link--footer">Виставки та події</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-10-11">
+              <ul class="nav__item">
+                <li class="nav__list">
+                  <a href="#subscription" class="nav__link nav__link--footer">Про Нас</a>
+                </li>
+                <li class="nav__list">
+                  <a href="#contacts" class="nav__link nav__link--footer">Контакти</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer__rights">
+            <span class="footer__rights-item">Designed by Zhyriada Marina</span>
+            <span class="footer__rights-item">Copyright © 2019. All Rights Reserved.</span>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
