seven solution museum

--- a/src/index.html
+++ b/src/index.html
@@ -290,14 +290,14 @@
                 <br>
               </h2>
               <div class="footer__icon">
-                <a href="https://www.facebook.com" class="footer__icon-facebook">
+                <a href="https://www.facebook.com/namu.museum/" class="footer__icon-facebook">
                   <img
                     src=".//images/fotter/Facebook.svg"
                     alt="Facebook"
                     class="footer__icon-img"
                   >
                 </a>
-                <a href="https://www.instagram.com" class="footer__icon-instagram">
+                <a href="https://www.instagram.com/namu.museum/" class="footer__icon-instagram">
                   <img
                     src=".//images/fotter/instagram.svg"
                     alt="Instagram"
