add gray background-color

--- a/src/index.html
+++ b/src/index.html
@@ -54,13 +54,15 @@
             grid__item--notebook-3-5
           ">
           <input 
-            type="text" 
+            type="text"
             name="search"
             class="form__bilets form-field"
             placeholder="КВИТКИ"
           >
 
-          <button class="form__search"></button>
+          <a
+          href="#exhibitions"
+          class="form__search"></a>
         </form>
 
         <a
@@ -360,7 +362,9 @@
           </div>
 
           <form
-            action="#"
+            action="#about-us"
+            method="get"
+            autocomplete="off"
             class="
               form
               grid__item--phone-1-2
@@ -376,11 +380,12 @@
               required
             >
 
-            <button
+            <a
+            href="#about-us"
             class="
             form__search
             form__search-p
-            "></button>
+            "></a>
           </form>
 
         </div>
