--- a/src/index.html
+++ b/src/index.html
@@ -53,12 +53,9 @@
             grid__item--tablet-1-3
             grid__item--notebook-3-5
           ">
-          <input 
-            type="text"
-            name="search"
-            class="form__bilets form-field"
-            placeholder="КВИТКИ"
-          >
+          <div class="form__bilets form-field">
+            КВИТКИ
+          </div>
 
           <a
           href="#exhibitions"
@@ -80,7 +77,7 @@
     </header>
 
     <nav class="menu page__menu" id="menu">
-      <div class="grid">
+      <div class="grid menu__container">
         <div class="menu__content grid__item--phone-1-2 grid__item--tablet-1-2 grid__item--notebook-1-5">
           <a 
             href="#" 
@@ -119,6 +116,7 @@
         <div class="menu__border grid__item--phone-1-2 grid__item--tablet-3-3 grid__item--notebook-6-6"></div>
   
         <div class="menu__schedule grid__item--phone-1-2 grid__item--tablet-4-6 grid__item--notebook-8-11">
+
           <h3 class="menu__schedule-name">
             Графік роботи
           </h3>
@@ -381,7 +379,7 @@
             >
 
             <a
-            href="#about-us"
+            href="#"
             class="
             form__search
             form__search-p
@@ -550,7 +548,7 @@
 
       <div class="footer__creator grid__item--phone-1-2 grid__item--tablet-1-6 grid__item--notebook-1-12">
         <div class="footer__creator-company">
-          Copyright © 2019. All Rights Reserved.
+          Copyright © 2023. All Rights Reserved.
         </div>
         <div class="footer__creator-name">
           Designed by Zhyriada Marina
