--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,7 @@
             ХУДОЖНІЙ МУЗЕЙ
         </h1>
 
-        <form
-          action="#"
+        <div
           class="
             form
             grid__item--phone-1-2
@@ -60,7 +59,7 @@
           <a
           href="#exhibitions"
           class="form__search"></a>
-        </form>
+        </div>
 
         <a
           href="#lection"
@@ -365,6 +364,7 @@
             autocomplete="off"
             class="
               form
+              form-field
               grid__item--phone-1-2
               grid__item--tablet-2-5
               grid__item--notebook-4-9
@@ -378,12 +378,13 @@
               required
             >
 
-            <a
-            href="#"
+            <button
+            type="submit"
             class="
+            form-field
             form__search
             form__search-p
-            "></a>
+            "></button>
           </form>
 
         </div>
