--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,9 @@
             grid__item--tablet-1-3
             grid__item--notebook-3-5
           ">
-          <div class="form__bilets form-field">
+          <a href="#exhibitions" class="form__bilets form-field">
             КВИТКИ
-          </div>
+          </a>
 
           <a
           href="#exhibitions"
