--- a/src/index.html
+++ b/src/index.html
@@ -47,18 +47,18 @@
 
         <div
           class="
-            form
+            forms
             grid__item--phone-1-2
             grid__item--tablet-1-3
             grid__item--notebook-3-5
           ">
-          <a href="#exhibitions" class="form__bilets form-field">
+          <a href="#exhibitions" class="forms__bilets">
             КВИТКИ
           </a>
 
           <a
           href="#exhibitions"
-          class="form__search"></a>
+          class="forms__search"></a>
         </div>
 
         <a
@@ -364,7 +364,7 @@
             autocomplete="off"
             class="
               form
-              form-field
+              forms
               grid__item--phone-1-2
               grid__item--tablet-2-5
               grid__item--notebook-4-9
@@ -373,7 +373,7 @@
             <input 
               type="email" 
               name="email"
-              class="form__email form-field"
+              class="forms__email"
               placeholder="E-mail"
               required
             >
@@ -381,9 +381,8 @@
             <button
             type="submit"
             class="
-            form-field
-            form__search
-            form__search-p
+            forms__search
+            forms__search-p
             "></button>
           </form>
 
