slider for mobile was added

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
-    <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="./images/favicon.svg">
-    <script src="scripts/main.js" defer></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body" id="top">
     <header class="header page__section">
@@ -184,14 +184,99 @@
           <h2 class="page__section-title">
             Галерея
           </h2>
+
+          <div class="gallery">
+            <div class="grid">
+              <div class="grid__item grid__item--desktop-1-4">
+                <img 
+                  src="./images/exhibits/exhibit_1.png" 
+                  alt="Експонат №1" 
+                  class="gallery__photo gallery__photo--1"
+                >
+              </div>
+              <div class="grid__item grid__item--desktop-5-12">
+                <img 
+                  src="./images/exhibits/exhibit_2.png" 
+                  alt="Експонат №2" 
+                  class="gallery__photo gallery__photo--1"
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="gallery">
+            <div class="grid">
+              <div class="grid__item grid__item--desktop-1-8">
+                <img 
+                  src="./images/exhibits/exhibit_3.png" 
+                  alt="Експонат №3" 
+                  class="gallery__photo gallery__photo--2"
+                >
+              </div>
+              <div class="grid__item grid__item--desktop-9-12">
+                <img 
+                  src="./images/exhibits/exhibit_4.png" 
+                  alt="Експонат №4" 
+                  class="gallery__photo gallery__photo--2"
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  class="swiper-slide--img"
+                  src="./images/exhibits/exhibit_1.png" 
+                  alt="Exhibit 1"
+                >
+              </div>
+              <div class="swiper-slide">
+                <img
+                  class="swiper-slide--img"
+                  src="./images/exhibits/exhibit_2.png" 
+                  alt="Exhibit 2"
+                >
+              </div>
+              <div class="swiper-slide">
+                <img
+                  class="swiper-slide--img"
+                  src="./images/exhibits/exhibit_3.png" 
+                  alt="Exhibit 3"
+                >
+              </div>
+              <div class="swiper-slide">
+                <img
+                  class="swiper-slide--img"
+                  src="./images/exhibits/exhibit_4.png" 
+                  alt="Exhibit 4"
+                >
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+          
+          </div>
         </div>
       </section>
 
       <section class="page__section" id="subscribe">
-        <div class="container">
-          <h2 class="page__section-title">
-            Підписка
-          </h2>
+        <div class="subscribe">
+          <div class="container">
+            <h2 class="page__section-title subscribe__title">
+              Підписка
+            </h2>
+            <p class="subscribe__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form class="subscribe__form">
+              <input type="email">
+            </form>
+          </div>
         </div>
       </section>
     </main>
@@ -314,5 +399,8 @@
       href="#top" 
       class="icon icon--to-top"
     ></a>
+    <script src="./scripts/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="./scripts/slider.js"></script>
   </body>
 </html>
