SUBSCRIBE section for mobile was added

--- a/src/index.html
+++ b/src/index.html
@@ -274,7 +274,17 @@
             </p>
 
             <form class="subscribe__form">
-              <input type="email">
+              <input
+                placeholder="E-mail"
+                type="email"
+                class="subscribe__form--input"
+              >
+              <div class="subscribe__form--button">
+                <img 
+                  src="./images/subsribe_arrow.svg"
+                  alt="Arrow image"
+                >
+              </div>
             </form>
           </div>
         </div>
