menu for tablet was fixed

--- a/src/index.html
+++ b/src/index.html
@@ -76,18 +76,19 @@
           <div class="schedule nav__schedule">
             <h3 class="schedule--title">Графік роботи</h3>
 
-            <p class="schedule--schedule">
-              <span class="bold">12:00 — 20:00</span> середа <br>
-              <span class="bold">12:00 — 20:00</span> четвер <br>
-              <span class="bold">12:00 — 20:00</span> п’ятниця <br>
-              <span class="bold">11:00 — 19:00</span> субота <br>
-              <span class="bold">11:00 — 19:00</span> неділя
-            </p>
-
-            <p class="schedule--descriptions">
-              <span class="bold">Вихідні:</span> понеділок, вівторок <br>
-              Каса припиняє роботу за 1 годину до закриття музею
-            </p>
+            <div class="nav__schedule--wrap">
+              <p class="schedule--schedule nav__schedule--schedule">
+                <span class="bold">12:00 — 20:00</span> середа <br>
+                <span class="bold">12:00 — 20:00</span> четвер <br>
+                <span class="bold">12:00 — 20:00</span> п’ятниця <br>
+                <span class="bold">11:00 — 19:00</span> субота <br>
+                <span class="bold">11:00 — 19:00</span> неділя
+              </p>
+              <p class="schedule--descriptions nav__schedule--descriptions">
+                <span class="bold">Вихідні:</span> понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
           </div>
         </div>
       </div>
