--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>НАМУ</title>
+    <link
+      rel="shortcut icon"
+      href="./images/icons/logo.svg"
+      type="image/x-icon"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="on"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
