--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,28 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
+    <header class="header">
+      <div class="header__container">
+        <div class="header__content">
+          <div class="header__menu">
+            <div class="header__menu-icon">
+              <a href="#menu" class="icon icon--menu-open"></a>
+            </div>
+          </div>
+          <div class="header__logo">
+            <a href="#" class="logo">
+              <img
+                class="logo__image"
+                src="./images/icons/logo.svg"
+                alt="Logo"
+              >
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="header__wrapper">
+      </div>
+    </header>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
