Created MUSEUM section

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header class="header">
+    <header class="header page__header">
       <div class="header__container">
         <div class="header__content">
           <div class="header__menu">
@@ -40,9 +40,40 @@
           </div>
         </div>
       </div>
-      <div class="header__wrapper">
-      </div>
     </header>
+    <main>
+      <section class="museum page__museum">
+        <div class="museum__image">
+          <img
+            src="./images/background/header.png"
+            alt="Museum photo"
+            class="museum__img"
+          >
+        </div>
+        <div class="museum__container">
+          <div class="museum__content">
+            <div class="museum__main">
+              <h1 class="museum__title">Художній музей</h1>
+              <a
+                href="#"
+                class="museum__tickets"
+                target="_blank"
+                title="Купити квитки"
+                rel="noopener">
+                <span class="museum__ticket-field">КВИТКИ</span>
+                <span class="museum__ticket-link">
+                  <img
+                    class="museum__link-arrow"
+                    src="./images/icons/arrow.svg"
+                    alt="Buy tickets">
+                </span>
+              </a>
+              <div class="museum__hint">ПОДІЇ</div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
