the layout was finished

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           </h1>
 
           <div class="header__wrap-ticket">
-            <a class="header__ticket">
+            <a class="header__ticket" href="#footer">
               <p class="header__ticket--text">
                 КВИТКИ
               </p>
