--- a/src/index.html
+++ b/src/index.html
@@ -274,18 +274,27 @@
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
 
-            <form class="subscribe__form">
+            <form 
+              class="subscribe__form" 
+              action="#" 
+              id="formId"
+            >
               <input
                 placeholder="E-mail"
                 type="email"
                 class="subscribe__form--input"
+                required
               >
-              <div class="subscribe__form--button">
+              <button 
+                class="subscribe__form--button" 
+                type="submit" 
+                id="messageButton"
+              >
                 <img 
                   src="./images/subsribe_arrow.svg"
                   alt="Arrow image"
                 >
-              </div>
+              </button>
             </form>
           </div>
         </div>
