some hover effects were added

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           </h1>
 
           <div class="header__wrap-ticket">
-            <a class="header__ticket" href="#footer">
+            <a class="header__ticket" href="#events">
               <p class="header__ticket--text">
                 КВИТКИ
               </p>
@@ -105,7 +105,7 @@
             <img
               src="./images/event1.png"
               alt="Фото 'Йду і повертаюсь'"
-              class="events__photo"
+              class="events__photo img__zoom"
             >
 
             <div class="events__info">
@@ -132,7 +132,7 @@
             <img
               src="./images/event2.png"
               alt="Фото 'І спогади і мрії'"
-              class="events__photo"
+              class="events__photo img__zoom"
             >
 
             <div class="events__info">
@@ -192,14 +192,14 @@
                 <img 
                   src="./images/exhibits/exhibit_1.png" 
                   alt="Експонат №1" 
-                  class="gallery__photo gallery__photo--1"
+                  class="gallery__photo gallery__photo--1 img__zoom"
                 >
               </div>
               <div class="grid__item grid__item--desktop-5-12">
                 <img 
                   src="./images/exhibits/exhibit_2.png" 
                   alt="Експонат №2" 
-                  class="gallery__photo gallery__photo--1"
+                  class="gallery__photo gallery__photo--1 img__zoom"
                 >
               </div>
             </div>
@@ -211,14 +211,14 @@
                 <img 
                   src="./images/exhibits/exhibit_3.png" 
                   alt="Експонат №3" 
-                  class="gallery__photo gallery__photo--2"
+                  class="gallery__photo gallery__photo--2 img__zoom"
                 >
               </div>
               <div class="grid__item grid__item--desktop-9-12">
                 <img 
                   src="./images/exhibits/exhibit_4.png" 
                   alt="Експонат №4" 
-                  class="gallery__photo gallery__photo--2"
+                  class="gallery__photo gallery__photo--2 img__zoom"
                 >
               </div>
             </div>
