museum 1st commit

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,584 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="shortcut icon"
+      href="./images/favicon.svg"
+      type="image/x-icon"
+      >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="page__section header">
+      <div class="header__image"></div>
+      <div class="container">
+        <div class="header__nav">
+          <a href="#menu" class="icon icon--menu"></a>
+          <a href="#" class="logo"
+            >
+            na
+            <br>
+            mu
+          </a>
+        </div>
+        <div class="header__content">
+          <h1 class="header__title page__title"
+            >
+            художній музей
+          </h1>
+          <button class="button">
+            <a href="#tickets" class="button__link"
+              >
+              квитки
+            </a>
+          </button>
+          <a href="#current-events" class="header__line">події</a>
+        </div>
+      </div>
+    </header>
+    <nav id="menu" class="menu page__menu">
+      <div class="container">
+        <div class="menu__wrapper">
+          <div class="menu__nav">
+            <a href="#" class="icon icon--cross"></a>
+            <ul class="menu__content">
+              <li class="menu__title">
+                <a href="#gallery" class="menu__title--link"
+                  >
+                  Галерея
+                </a>
+              </li>
+              <li class="menu__title">
+                <a href="#" class="menu__title--link"
+                  >
+                  Про Нас
+                </a>
+              </li>
+              <li class="menu__title">
+                <a href="#current-events" class="menu__title--link"
+                  >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="menu__title">
+                <a href="#contacts" class="menu__title--link"
+                  >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="menu__schedule">
+            <h4
+              class="
+                menu__item
+                menu__item--regular
+                menu__item--first"
+              >
+              Графік роботи
+            </h4>
+            <ul class="menu__list">
+              <li class="menu__item">
+                12:00— 20:00
+                <span class="menu__item--regular"
+                  >
+                  середа
+                </span>
+              </li>
+              <li class="menu__item">
+                12:00— 20:00
+                <span class="menu__item--regular"
+                  >
+                  четвер
+                </span>
+              </li>
+              <li class="menu__item">
+                12:00 — 20:00
+                <span class="menu__item--regular"
+                  >
+                  п’ятниця
+                </span>
+              </li>
+              <li class="menu__item">
+                11:00 — 19:00
+                <span class="menu__item--regular"
+                  >
+                  субота
+                </span>
+              </li>
+              <li class="menu__item">
+                11:00 — 19:00
+                <span class="menu__item--regular"
+                  >
+                  неділя
+                </span>
+              </li>
+              <li class="menu__item menu__item--last">Вихідні:
+                <span class="menu__item--regular">понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <main>
+      <div id="current-events" class="page__section current-events">
+        <div class="container">
+          <h2 class="page__title current-events__title"
+            >
+            Актуальні події
+          </h2>
+          <div
+            class="
+              current-events__place
+              grid
+              grid--not-phone"
+            >
+            <img
+              src="../src/images/currentevents1.png"
+              alt="Йду і повертаюсь"
+              class="
+                current-events__image
+                grid__item
+                grid__item--tablet-1-6
+                grid__item--desktop-1-7"
+              >
+            <div
+              class="
+                current-events__text
+                grid__item
+                grid__item--tablet-1-4
+                grid__item--desktop-9-12">
+              <div class="current-events__exhibition-time">
+                <p class="current-events__exhibition"
+                  >
+                  виставка
+                </p>
+                <p class="current-events__time"
+                  >
+                  26.08-29.11.2019
+                </p>
+              </div>
+              <h3 class="current-events__subtitle"
+                >
+                Йду і повертаюсь
+              </h3>
+              <p class="current-events__paragraph"
+                >
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+          <div
+            class="
+              current-events__place
+              grid
+              grid--not-phone"
+            >
+            <img
+              src="../src/images/currentevents2.png"
+              alt="І спогади і мрії"
+              class="
+                current-events__image
+                grid__item
+                grid__item--tablet-1-6
+                grid__item--desktop-1-7">
+            <div
+              class="
+                current-events__text
+                grid__item
+                grid__item--tablet-1-4
+                grid__item--desktop-9-12">
+              <div class="current-events__exhibition-time">
+                <p class="current-events__exhibition"
+                  >
+                  виставка
+                </p>
+                <p class="current-events__time"
+                  >
+                  26.08-29.11.2019
+                </p>
+              </div>
+              <h3 class="current-events__subtitle"
+                >
+                І спогади і мрії
+              </h3>
+              <p class="current-events__paragraph"
+                >
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="current-events__place current-events__place--last">
+          <img
+            src="../src/images/currentevents3.png"
+            alt="Від класицизму до романтизму"
+            class="current-events__image--last"
+            >
+          <div class="current-events__lection">
+            <div class="current-events__exhibition-time current-events__exhibition-time--last">
+              <p class="current-events__exhibition"
+                >
+                Лекція
+              </p>
+              <p class="current-events__time"
+                >
+                26/08/2019 - 11:00
+              </p>
+            </div>
+            <h3 class="current-events__subtitle current-events__subtitle--last"
+              >
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </div>
+      <div class="gallery">
+        <div class="container">
+          <h2 class="page__title gallery__title"
+            >
+            Галерея
+          </h2>
+        </div>
+        <div class="swiper gallery__swiper">
+          <div class="swiper-wrapper gallery__wrapper">
+            <div class="swiper-slide gallery__slide">
+              <img
+                src="./images/gallery1.png"
+                alt="Painting 1"
+                class="gallery__slide--image"
+              >
+            </div>
+            <div class="swiper-slide gallery__slide">
+              <img
+                src="./images/gallery5.png"
+                alt="Painting 5"
+                class="gallery__slide--image"
+              >
+            </div>
+            <div class="swiper-slide gallery__slide">
+              <img
+                src="./images/gallery3.png"
+                alt="Painting 3"
+                class="gallery__slide--image"
+              >
+            </div>
+            <div class="swiper-slide gallery__slide">
+              <img
+                src="./images/gallery4.png"
+                alt="Painting 4"
+                class="gallery__slide--image"
+              >
+            </div>
+          </div>
+          <div class="swiper-pagination gallery__pagination">
+          </div>
+
+
+        </div>
+        <div class="container">
+          <div class="gallery__desktop grid grid--not-phone">
+            <img
+              src="../src/images/gallery1.png"
+              alt="Painting 1"
+              class="
+                gallery__desktop--image
+                grid__item
+                grid__item--desktop-1-4"
+              >
+            <img
+              src="../src/images/gallery2.png"
+              alt="Painting 1"
+              class="
+                gallery__desktop--image
+                grid__item
+                grid__item--desktop-5-12"
+              >
+            <img
+              src="../src/images/gallery3.png"
+              alt="Painting 1"
+              class="
+                gallery__desktop--image
+                grid__item
+                grid__item--desktop-1-8"
+              >
+            <img
+              src="../src/images/gallery4.png"
+              alt="Painting 1"
+              class="
+                gallery__desktop--image
+                grid__item
+                grid__item--desktop-9-12"
+              >
+          </div>
+        </div>
+      </div>
+
+      </div>
+      <div class="subscription">
+        <div class="container">
+          <div class="grid grid--not-phone">
+            <div
+              class="
+                subscription__place
+                grid__item
+                grid__item--tablet-2-5
+                grid__item--desktop-4-9"
+                >
+              <h3 class="page__title subscription__title"
+                >
+                Підписка
+              </h3>
+              <p class="subscription__paragraph"
+                >
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+              <form
+                action="#"
+                method="get"
+                class="subscription__form"
+              >
+                <input
+                  type="email"
+                  class="subscription__input"
+                  required
+                  placeholder="E-mail"
+                >
+                <button class="subscription__button" type="submit"></button>
+              </form>
+            </div>
+
+
+          </div>
+        </div>
+
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="grid">
+          <div
+            class="
+              grid__item
+              grid__item--1-2
+              grid__item--tablet-1-1
+              grid__item--desktop-1-1"
+            >
+            <div
+              class="footer__nav"
+              >
+              <a href="#" class="logo logo--footer"
+                >
+                na
+                <br>
+                mu
+              </a>
+              <div class="footer__socials">
+                <a href="https://facebook.com" class="icon icon--facebook"></a>
+                <a href="https://instagram.com" class="icon icon--instagram"></a>
+              </div>
+
+            </div>
+          </div>
+
+          <div
+            class="
+              menu__schedule
+              footer__schedule
+              grid__item
+              grid__item--1-1
+              grid__item--tablet-2-3
+              grid__item--desktop-3-4"
+            >
+            <h4
+              class="
+                menu__item
+                menu__item--regular
+                menu__item--first
+                menu__item--footer"
+              >
+              Графік роботи
+            </h4>
+            <ul class="menu__list menu__list--footer">
+              <li class="menu__item menu__item--footer">
+                12:00— 20:00
+                <span class="menu__item--regular"
+                  >
+                  середа
+                </span>
+              </li>
+              <li class="menu__item menu__item--footer">
+                12:00— 20:00
+                <span class="menu__item--regular"
+                  >
+                  четвер
+                </span>
+              </li>
+              <li class="menu__item menu__item--footer">
+                12:00 — 20:00
+                <span class="menu__item--regular"
+                  >
+                  п’ятниця
+                </span>
+              </li>
+              <li class="menu__item menu__item--footer">
+                11:00 — 19:00
+                <span class="menu__item--regular"
+                  >
+                  субота
+                </span>
+              </li>
+              <li class="menu__item menu__item--footer">
+                11:00 — 19:00
+                <span class="menu__item--regular"
+                  >
+                  неділя
+                </span>
+              </li>
+              <li
+                class="
+                  menu__item
+                  menu__item--last
+                  menu__item--footer
+                  menu__item--footer-last"
+                >
+                Вихідні:
+                <span class="menu__item--regular">понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </span>
+              </li>
+            </ul>
+          </div>
+          <div
+            class="
+              menu
+              footer__menu
+              grid__item
+              grid__item--2-2
+              grid__item--tablet-4-5
+              grid__item--desktop-5-6"
+            >
+            <h4
+              class="
+                menu__item
+                menu__item--regular
+                menu__item--first
+                menu__item--footer"
+              >
+              Контакти
+            </h4>
+            <a
+              href="https://goo.gl/maps/f5u8Zmc1CbaCHGwY9"
+              class="
+                menu__item
+                menu__item--regular
+                menu__item--footer"
+                >
+                вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <a
+              href="tel:+380442781357"
+              class="
+                menu__item
+                menu__item--regular
+                menu__item--footer"
+              >
+              тел. +38 (044) 278-13-57
+            </a>
+            <a href="fax:+380442787454"
+              class="
+                  menu__item
+                  menu__item--regular
+                  menu__item--footer"
+              >
+              факс +38 (044) 278-74-54
+            </a>
+            <a
+              href="email:info@namu.kiev.ua"
+              class="
+                  menu__item
+                  menu__item--regular
+                  menu__item--footer"
+              >
+              e-mail: info@namu.kiev.ua
+            </a>
+            <a href="#" class="footer__arrow"></a>
+          </div>
+          <ul
+          class="
+            menu__footer
+            grid__item--1-2
+            grid__item--tablet-2-5
+            grid__item--desktop-8-11"
+          >
+            <li
+              class="
+                menu__title
+                menu__title--footer"
+              >
+              <a href="#gallery" class="menu__title--link menu__title--footer"
+                >
+                Галерея
+              </a>
+            </li>
+            <li
+              class="
+                menu__title
+                menu__title--footer"
+              >
+              <a href="#" class="menu__title--link menu__title--footer"
+                >
+                Про Нас
+              </a>
+            </li>
+            <li
+              class="
+                menu__title
+                menu__title--footer-2-row"
+              >
+              <a href="#current-events" class="menu__title--link menu__title--footer"
+                >
+                Виставки та події
+              </a>
+            </li>
+            <li
+              class="
+                menu__title
+                menu__title--footer-2-row"
+              >
+              <a href="#contacts" class="menu__title--link menu__title--footer"
+                >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__copyright">
+          <p class="footer__design"
+          >
+          Designed by Zhyriada Marina
+          </p>
+          <p class="footer__design"
+            >
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
